# xeonitte

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  meson.build  module.nix  rust-toolchain.toml
.github/workflows/: ci.yml
config/: README.md  advanced.yml.in  apply.sh  asd  config.yml  disko-generator.nix  flatpak.yml.in  meson.build  minimal.yml.in
config/advanced/: flake.nix
config/advanced/systems/ARCH/HOSTNAME/: default.nix  modules.nix
config/basic/: flake.nix
config/basic/systems/ARCH/HOSTNAME/: default.nix  disko.nix  hardware.nix  modules.nix
config/branding/xinux/: meson.build  slides.yml.in
config/flatpak/: flake.nix
config/minimal/: flake.nix
config/minimal/systems/ARCH/HOSTNAME/: default.nix
convertyml/: default.nix
data/: default.nix  meson.build  org.xinux.Xeonitte.desktop.in.in  org.xinux.Xeonitte.gschema.xml.in  org.xinux.Xeonitte.metainfo.xml.in.in  org.xinux.Xeonitte.policy.in.in
data/config/: advanced.yml.in  basic.yml.in
data/config/advanced/: flake.nix
data/data/resources/: resources.gresource.xml
data/po/: LINGUAS  ru.mo
data/resources/: resources.gresource.xml
modules/nixos/xeonitte/: default.nix  xeonitte.nix
po/: POTFILES.in  ru.po  translations.pot  uz.mo  uz.po
shells/xeonitte/: default.nix
src/: main.rs
src/ui/: quitdialog.rs  window.rs
src/ui/pages/: error.rs  install.rs  keyboard.rs  list.rs  partitions.rs  summary.rs  timezone.rs  user.rs  welcome.rs
src/utils/: install.rs  language.rs  parse.rs
variables/: meson.build
vte4-rs/: .gitlab-ci.yml  Cargo.toml  Vte-3.91.gir
vte4-rs/vte4/: Cargo.toml  Gir.toml  README.md
vte4-rs/vte4/src/: lib.rs  prelude.rs  pty.rs  terminal.rs
vte4-rs/vte4/src/auto/: enums.rs  flags.rs  mod.rs  pty.rs  regex.rs  terminal.rs  versions.txt
vte4-rs/vte4/src/examples/: main.rs
vte4-rs/vte4/sys/: Cargo.toml  Gir.toml  build.rs
vte4-rs/vte4/sys/src/: lib.rs
vte4-rs/vte4/sys/tests/: abi.rs  constant.c  layout.c
xeonitte/: Cargo.toml  build.rs  default.nix
xeonitte-helper/: Cargo.toml  default.nix
xeonitte-helper/src/: main.rs  meson.build
xeonitte/src/: config.rs  main.rs
xeonitte/src/ui/: mod.rs  quitdialog.rs  window.rs
xeonitte/src/ui/pages/: error.rs  keyboard.rs  list.rs  partitions.rs  welcome.rs
xeonitte/src/utils/: install.rs  parse.rs
