[package]
name = "xeonitte"
version = "0.0.2"
edition = "2021"
default-run = "xeonitte"

[dependencies]
relm4 = { version = "0.9", features = ["libadwaita", "macros"] }
relm4-components = { package = "relm4-components", version = "0.9" }
adw = { package = "libadwaita", version = "0.7.1", features = [
  "v1_2",
  "gtk_v4_6",
] }
gtk = { package = "gtk4", version = "0.9.6", features = ["v4_6"] }
glib = { package = "glib", version = "0.20", features = ["v2_68"] }
tokio = { version = "1.32", features = ["full"] }
tracker = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
isolang = "2.3.0"
gnome-desktop = { git = "https://github.com/xinux-org/desktop" }
libgweather = "4.5"
size = "0.4"
vte = { package = "vte4", git = "https://github.com/xinux-org/vte4" }
distinst-disks = { git = "https://github.com/xinux-org/distinst" }
reqwest = { version = "0.11", features = ["blocking"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
regex = "1.9"

[workspace]
members = [".", "xeonitte-helper"]
default-members = [".", "xeonitte-helper"]
