[package]
name = "xeonitte"
version = "0.0.2"
edition = "2024"
default-run = "xeonitte"
authors = [
  "Sokhibjon Orzikulov <sakhib@orzklv.uz>",
  "Victor Fuentes <vlinkz@snowflakeos.org>",
]

[dependencies]
# GNOME
relm4 = { version = "0.9.1", features = ["libadwaita", "macros", "gnome_47" ] }
relm4-components = { package = "relm4-components", version = "0.9.1" }
libgweather = "=4.5.0"
vte = { package = "vte4", version = "0.8.0"}

tokio = { version = "1.49.0", features = ["full"] }
tracker = "0.2"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
log = "0.4.29"
simplelog = "0.12"
anyhow = "1.0.100"
isolang = "2.3.0"
gnome-desktop = { package = "gnome-desktop-xinux", version = "0.4.3" }
size = "0.5.0"
distinst-disks = { git = "https://github.com/xinux-org/distinst" }
reqwest = { version = "0.13.1", features = ["blocking"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
regex = "1.12.2"

[workspace]
members = [".", "xeonitte-helper"]
default-members = [".", "xeonitte-helper"]
