version = meson.project_version()

prefix = get_option('prefix')
bindir = prefix / get_option('bindir')
libexecdir = prefix / get_option('libexecdir')
localedir = prefix / get_option('localedir')
sysconfdir = '/' / get_option('sysconfdir')
pkgconfdir = prefix / get_option('sysconfdir')

datadir = prefix / get_option('datadir')
pkgdatadir = datadir / meson.project_name()
iconsdir = datadir / 'icons'
podir = meson.project_source_root() / 'po'
gettext_package = meson.project_name()

profile = ''
version_suffix = ''
base_id = 'org.xinux.Xeonitte'
application_id = base_id
