[package]
name = "vte4"
version = "0.8.0"
authors = ["The Gtk-rs Project Developers"]
categories = ["api-bindings"]
description = "Rust bindings for the VTE Gtk4 library"
edition = "2021"
keywords = ["vte", "gtk", "gnome"]
license = "MIT"
repository = "https://gitlab.gnome.org/World/Rust/vte4-rs"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "1.3"
ffi = { package = "vte4-sys", path = "./sys", version = "0.8" }
io-lifetimes = "1.0.3"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.8"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.8"

[features]
default = []
v0_66 = ["ffi/v0_66"]
v0_70 = ["v0_66", "ffi/v0_70"]
v0_72 = ["v0_70", "ffi/v0_72"]
